Fix small screen size order number overflow bug on checkout success page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -312,6 +312,10 @@ nav a {
     .increment-qty, .decrement-qty {
         padding: 2px !important;
     }
+
+    .order-confirmation-wrapper{
+        word-break: break-all;
+    }
 }
 
 
